RESOLVED FIXED207959
Regression(r247567) HTTP Disk cache capacity is no longer set
https://bugs.webkit.org/show_bug.cgi?id=207959
Summary Regression(r247567) HTTP Disk cache capacity is no longer set
Chris Dumez
Reported 2020-02-19 13:41:20 PST
HTTP Disk cache capacity is no longer set since r247567 so we end up with a default capacity for std::numeric_limit<size_t>::max().
Attachments
Patch (14.61 KB, patch)
2020-02-19 13:58 PST, Chris Dumez
no flags
Patch (14.66 KB, patch)
2020-02-19 14:50 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-19 13:41:50 PST
Chris Dumez
Comment 2 2020-02-19 13:58:49 PST
Antti Koivisto
Comment 3 2020-02-19 14:12:27 PST
Comment on attachment 391197 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=391197&action=review > Source/WebKit/NetworkProcess/cache/NetworkCache.cpp:76 > + calculateURLCacheSizes(cacheModel, diskFreeSize, urlCacheMemoryCapacity, urlCacheDiskCapacity); > + } > + return urlCacheDiskCapacity; This stuff could use a cleanups at some point. We have no "URL cache" and urlCacheMemoryCapacity is never used.
Alex Christensen
Comment 4 2020-02-19 14:13:09 PST
Comment on attachment 391197 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=391197&action=review > Source/WebKit/NetworkProcess/NetworkProcess.cpp:2047 > + if (m_hasSetCacheModel && cacheModel == m_cacheModel) m_cacheModel should be an Optional instead of a bool m_hasSetCacheModel
Chris Dumez
Comment 5 2020-02-19 14:49:46 PST
Comment on attachment 391197 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=391197&action=review >> Source/WebKit/NetworkProcess/NetworkProcess.cpp:2047 >> + if (m_hasSetCacheModel && cacheModel == m_cacheModel) > > m_cacheModel should be an Optional instead of a bool m_hasSetCacheModel I agree but since the patch will likely get cherry-picked, I think it is good to keep the change minimal. I will drop changes to this line. Not sure why I dropped the parentheses.
Chris Dumez
Comment 6 2020-02-19 14:50:36 PST
WebKit Commit Bot
Comment 7 2020-02-19 15:34:01 PST
Comment on attachment 391204 [details] Patch Clearing flags on attachment: 391204 Committed r256967: <https://trac.webkit.org/changeset/256967>
WebKit Commit Bot
Comment 8 2020-02-19 15:34:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.